--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/ltc681x"
 [dependencies]
 embedded-hal = { version = "0.2.7", features = ["unproven"] }
 heapless = "0.7.10"
+fixed = "1.15.0"
 
 [dev-dependencies]
 mockall = "0.11.0"
